// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

import "google/protobuf/duration.proto";

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
  repeated string target_parties = 1;
  repeated string validators = 2;
  google.protobuf.Duration timeout = 3;
  uint32 levels = 4;
  string synchronizer_id = 5; // optional
  string workflow_id = 6; // optional
  string id = 7; // optional UUID to be used for ping test
}

message PingSuccess {
  uint64 ping_time = 1;
  string responder = 2;
}

message PingFailure {
  string reason = 1;
}

message PingResponse {
  oneof response {
    PingSuccess success = 1;
    PingFailure failure = 2;
  }
}
